# shelf

./: Cargo.toml  rustc-ice-2025-07-20T05_04_56-11362.txt  rustc-ice-2025-07-27T00_52_25-84079.txt  rustc-ice-2025-07-27T04_39_26-8965.txt  rustfmt.toml  taplo.toml
src/: config.rs  context.rs  lib.rs  memory.rs  program.rs  syscall.rs  vm.rs
src/instruction/: constants.rs  ixn.rs  mod.rs
src/parser/: constants.rs  mod.rs  types.rs
tests/: elf.rs
